# Japanese-Learning-Adventure

./: README.md  pyproject.toml
japanese-log/: app.py  helpers.py
japanese-log/data/: 2026-02-04.json  2026-02-06.json  2026-02-07.json  2026-02-09.json  2026-02-11.json
japanese_learning_log.egg-info/: PKG-INFO  SOURCES.txt
